Commentaire...:
(　ﾟ∀ﾟ)っ由
	Préparation démonstration réunion clients
		- amélioration du monde bac à sable avec invocation d'oeufs
		- scénario

__________________________________
Numero........:  52;
Date..........:  21/11/2014 14h20;
Auteur........:  py;
Commentaire...:
	Intégration travaux Soukaina et Ivan
		- Nouvelles scènes, nouvelles textures, nouveaux guiskins
		- Scène d'accueil
		- Musique
		- Cablage accueil -> bac à sable, scène JvsIA, scène JvJ
	Tache 145 terminée : Mise à jour des scènes
	Taches 143 et 144 terminées : boutons pour arreter la partie et gérer le son;
	Tache 142 terminée : mise à jour des prefabs :
		- Monde(s) de jeu : bac à sable, JvIA, JvJ
		- Caméra(s) : bac à sable, JvJ, JvIA
		- Accueil...
	Tache 140 terminée : plus de colliders sur les plantes vers près des reines, réduction des tailles
__________________________________
Numero........:  53;
Date..........:  21/11/2014 17h34;
Auteur........:  py;
Commentaire...:
	Tache 147 terminée : le soeufs ne bougent plus (freeze en X/Y/Z position et rotation);
	Tache 146 terminée : nouveaux prefabs pour les reines
	Ajout modifications d'Ivan sur MenusJeu.cs;
	
__________________________________
Numero........:  54;
Date..........:  21/11/2014 19h39;
Auteur........:  py;
Commentaire...:
	ლ(ಠ益ಠლ) Ce code de qualité... Much bordel... Very crade... Very dépité !
	Intégration des travaux de Sophie et d'Ivan :
		- Prefabs eau, prefabs fleches, prefabs pistolets
		- Script cailloux, scritps eaux, scripts pistolets;
		- Invocations nouvelles...
		- Lancers de betises;
	
__________________________________
Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________
Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________
Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________