@@ -17,7 +17,7 @@ Global
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
 	EndGlobalSection
-																																																																																																																																																																																																																																																																																																					GlobalSection(MonoDevelopProperties) = preSolution
+																																																																																																																																																																																																																																																																																																								GlobalSection(MonoDevelopProperties) = preSolution
 																																																																																																																											GlobalSection(MonoDevelopProperties) = preSolution
 																																																																																																	GlobalSection(MonoDevelopProperties) = preSolution
 																																																																																																																							GlobalSection(MonoDevelopProperties) = preSolution
